resources and social content filtering

--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -51,6 +51,11 @@
                             DOWNLOAD PDF
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
+                        <br />
+                        <a href="#">
+                            Share this
+                            <i class="icon icon-share"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -113,99 +118,101 @@
         </div>
     </div>
     <div class="container static-body resources-container">
-        <div class="resources-list">
-            @*<div class="row">
-                <div class="resource-item col-md-6">
-                    <h4>VIDEO</h4>
-                    <div class="resource-item-body">
-                        <div class="resource-content">
-                            <h5>BRAVECTO OVERVIEW VIDEO</h5>
-                            <p>Lorem ipsum</p>
-                            <div class="action-wrapper">
-                                <a class="btn btn-default" href="#">
-                                    VIEW VIDEO
-                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                                </a>
-                                <a href="#">
-                                    Share this
-                                    <i class="icon icon-share"></i>
-                                </a>
+        <div class="row">
+            <ul class="resources-list">
+                @*<div class="row">
+                    <div class="resource-item col-md-6">
+                        <h4>VIDEO</h4>
+                        <div class="resource-item-body">
+                            <div class="resource-content">
+                                <h5>BRAVECTO OVERVIEW VIDEO</h5>
+                                <p>Lorem ipsum</p>
+                                <div class="action-wrapper">
+                                    <a class="btn btn-default" href="#">
+                                        VIEW VIDEO
+                                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                    </a>
+                                    <a href="#">
+                                        Share this
+                                        <i class="icon icon-share"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="resource-media-item">
+                                <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
                             </div>
                         </div>
-                        <div class="resource-media-item">
-                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                    </div>
+                    <div class="resource-item col-md-6">
+                        <h4>POSTER</h4>
+                        <div class="resource-item-body">
+                            <div class="resource-content">
+                                <h5>FLEA AND TICK POSTER</h5>
+                                <p>Lorem ipsum</p>
+                                <div class="action-wrapper">
+                                    <a class="btn btn-default" href="#">
+                                        DOWNLOAD
+                                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                    </a>
+                                    <a href="#">
+                                        Share this
+                                        <i class="icon icon-share"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="resource-media-item">
+                                <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="resource-item col-md-6">
-                    <h4>POSTER</h4>
-                    <div class="resource-item-body">
-                        <div class="resource-content">
-                            <h5>FLEA AND TICK POSTER</h5>
-                            <p>Lorem ipsum</p>
-                            <div class="action-wrapper">
-                                <a class="btn btn-default" href="#">
-                                    DOWNLOAD
-                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                                </a>
-                                <a href="#">
-                                    Share this
-                                    <i class="icon icon-share"></i>
-                                </a>
+                <div class="row">
+                    <div class="resource-item col-md-6">
+                        <h4>VIDEO</h4>
+                        <div class="resource-item-body">
+                            <div class="resource-content">
+                                <h5>BRAVECTO EBOOK</h5>
+                                <p>Discover how prescribing innovative treatments</p>
+                                <div class="action-wrapper">
+                                    <a class="btn btn-default" href="#">
+                                        DOWNLOAD
+                                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                    </a>
+                                    <a href="#">
+                                        Share this
+                                        <i class="icon icon-share"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="resource-media-item">
+                                <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
                             </div>
                         </div>
-                        <div class="resource-media-item">
-                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="resource-item col-md-6">
-                    <h4>VIDEO</h4>
-                    <div class="resource-item-body">
-                        <div class="resource-content">
-                            <h5>BRAVECTO EBOOK</h5>
-                            <p>Discover how prescribing innovative treatments</p>
-                            <div class="action-wrapper">
-                                <a class="btn btn-default" href="#">
-                                    DOWNLOAD
-                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                                </a>
-                                <a href="#">
-                                    Share this
-                                    <i class="icon icon-share"></i>
-                                </a>
+                    <div class="resource-item col-md-6">
+                        <h4>INFOGRAPHIC</h4>
+                        <div class="resource-item-body">
+                            <div class="resource-content">
+                                <h5>THE UNTOLD STORY INFOGRAPHIC</h5>
+                                <p>Lorem</p>
+                                <div class="action-wrapper">
+                                    <a class="btn btn-default" href="#">
+                                        DOWNLOAD
+                                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                    </a>
+                                    <a href="#">
+                                        Share this
+                                        <i class="icon icon-share"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="resource-media-item">
+                                <img src="~/Content/img/3_5milbooklet.png" />
                             </div>
                         </div>
-                        <div class="resource-media-item">
-                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                        </div>
                     </div>
-                </div>
-                <div class="resource-item col-md-6">
-                    <h4>INFOGRAPHIC</h4>
-                    <div class="resource-item-body">
-                        <div class="resource-content">
-                            <h5>THE UNTOLD STORY INFOGRAPHIC</h5>
-                            <p>Lorem</p>
-                            <div class="action-wrapper">
-                                <a class="btn btn-default" href="#">
-                                    DOWNLOAD
-                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                                </a>
-                                <a href="#">
-                                    Share this
-                                    <i class="icon icon-share"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="resource-media-item">
-                            <img src="~/Content/img/3_5milbooklet.png" />
-                        </div>
-                    </div>
-                </div>
-            </div>*@
+                </div>*@
+            </ul>
         </div>
         <div class="load-more-row row">
             <div class="col-md-6 col-lg-offset-3">
@@ -223,8 +230,9 @@
         $(document).ready(function () {
             $("#resources").resources({
                 filters: "input.resource-filter",
-                listName: "div.resources-list",
+                listName: "ul.resources-list",
                 loadMore: '#load-more',
+                itemClass: 'li.resource-item',
                 getUrl: "/GetBravovetsResources"
             });
         });
