--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -25,159 +25,176 @@
         </div>
     </div>
 </div>
-<div class="nomargin static-body resources-body darkgrey">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>FILTER CONTENT BY TOPIC / TYPE</h3>
-                <p>
-                    Check the boxes to the right to find curated posts to share, specific to content topic or type.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="informationalhowto" />
-                                INFORMATIONAL HOW-TO
-                            </label>
+<div id="social-content">
+    <div class="nomargin static-body resources-body darkgrey">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>FILTER CONTENT BY TOPIC / TYPE</h3>
+                    <p>
+                        Check the boxes to the right to find curated posts to share, specific to content topic or type.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="informationalhowto" class="socialcontent-filter" />
+                                    INFORMATIONAL HOW-TO
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="video" class="socialcontent-filter" />
+                                    VIDEO
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="clinicdisplayuse" class="socialcontent-filter" />
+                                    CLINIC DISPLAY USE
+                                </label>
+                            </div>
                         </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="video" />
-                                VIDEO
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="clinicdisplayuse" />
-                                CLINIC DISPLAY USE
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="signage" /> SIGNAGE
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="petownerdistribution" /> PET OWNER DISTRIBUTION
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="researchpaper" />
-                                RESEARCH PAPER
-                            </label>
+                        <div class="col-md-6">
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="signage" class="socialcontent-filter" /> SIGNAGE
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="petownerdistribution" class="socialcontent-filter" /> PET OWNER DISTRIBUTION
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="researchpaper" class="socialcontent-filter" />
+                                    RESEARCH PAPER
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container static-body resources-container">
+        <div class="social-content-items-list row">
+            @*<div class="social-content-item col-md-8 video-item">
+                    <h4>VIDEO</h4>
+                    <div class="social-content-item-body">
+                        <div class="social-content-content">
+                            <h5>A TALE OF TWO TREATMENTS</h5>
+                            <p>Take a look at two pet owners treatment experiences and discover how much more convenient and effective 12-week-long Bravecto can be compared to a traditional 4-week treatment.</p>
+                            <div class="action-wrapper">
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="social-content-media-item">
+                            <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="social-content-item col-md-4 poster-item">
+                    <h4>POSTER</h4>
+                    <div class="social-content-item-body">
+                        <div class="social-content-content">
+                            <h5>EXTENDING THE BEST EXPERIENCES WITH INNOVATIVE FLEA AND TICK CARE</h5>
+                            <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience</p>
+                            <div class="action-wrapper">
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="social-content-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="social-content-item col-md-4 poster-item">
+                    <h4>POSTER</h4>
+                    <div class="social-content-item-body">
+                        <div class="social-content-content">
+                            <h5>FLEA AND TICK POSTER</h5>
+                            <p>Lorem ipsum</p>
+                            <div class="action-wrapper">
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="social-content-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="social-content-item col-md-4 poster-item">
+                    <h4>POSTER</h4>
+                    <div class="social-content-item-body">
+                        <div class="social-content-content">
+                            <h5>FLEA AND TICK POSTER</h5>
+                            <p>Lorem ipsum</p>
+                            <div class="action-wrapper">
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="social-content-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="social-content-item col-md-4 poster-item">
+                    <h4>POSTER</h4>
+                    <div class="social-content-item-body">
+                        <div class="social-content-content">
+                            <h5>FLEA AND TICK POSTER</h5>
+                            <p>Lorem ipsum</p>
+                            <div class="action-wrapper">
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="social-content-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>*@
+        </div>
+        <div class="load-more-row row">
+            <div class="col-md-6 col-lg-offset-3">
+                <a href="#" class="load-more" id="load-more">
+                    LOAD MORE POSTS<br />
+                    <i class="glyphicon glyphicon-arrow-down"></i>
+                </a>
             </div>
         </div>
     </div>
 </div>
-<div class="container static-body resources-container">
-    <div class="social-content-items-list row">
-        <div class="social-content-item col-md-8 video-item">
-            <h4>VIDEO</h4>
-            <div class="social-content-item-body">
-                <div class="social-content-content">
-                    <h5>A TALE OF TWO TREATMENTS</h5>
-                    <p>Take a look at two pet owners treatment experiences and discover how much more convenient and effective 12-week-long Bravecto can be compared to a traditional 4-week treatment.</p>
-                    <div class="action-wrapper">
-                        <a href="#">
-                            Share this
-                            <i class="icon icon-share"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="social-content-media-item">
-                    <img src="~/Content/img/Bravecto_BravoPets_videothumb.jpg" />
-                </div>
-            </div>
-        </div>
-        <div class="social-content-item col-md-4 poster-item">
-            <h4>POSTER</h4>
-            <div class="social-content-item-body">
-                <div class="social-content-content">
-                    <h5>EXTENDING THE BEST EXPERIENCES WITH INNOVATIVE FLEA AND TICK CARE</h5>
-                    <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience @* to your customers while growing your business with Bravecto. *@</p>
-                    <div class="action-wrapper">
-                        <a href="#">
-                            Share this
-                            <i class="icon icon-share"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="social-content-media-item">
-                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                </div>
-            </div>
-        </div>
-        <div class="social-content-item col-md-4 poster-item">
-            <h4>POSTER</h4>
-            <div class="social-content-item-body">
-                <div class="social-content-content">
-                    <h5>FLEA AND TICK POSTER</h5>
-                    <p>Lorem ipsum</p>
-                    <div class="action-wrapper">
-                        <a href="#">
-                            Share this
-                            <i class="icon icon-share"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="social-content-media-item">
-                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                </div>
-            </div>
-        </div>
-        <div class="social-content-item col-md-4 poster-item">
-            <h4>POSTER</h4>
-            <div class="social-content-item-body">
-                <div class="social-content-content">
-                    <h5>FLEA AND TICK POSTER</h5>
-                    <p>Lorem ipsum</p>
-                    <div class="action-wrapper">
-                        <a href="#">
-                            Share this
-                            <i class="icon icon-share"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="social-content-media-item">
-                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                </div>
-            </div>
-        </div>
-        <div class="social-content-item col-md-4 poster-item">
-            <h4>POSTER</h4>
-            <div class="social-content-item-body">
-                <div class="social-content-content">
-                    <h5>FLEA AND TICK POSTER</h5>
-                    <p>Lorem ipsum</p>
-                    <div class="action-wrapper">
-                        <a href="#">
-                            Share this
-                            <i class="icon icon-share"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="social-content-media-item">
-                    <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="load-more-row row">
-        <div class="col-md-6 col-lg-offset-3">
-            <a href="#" class="load-more">
-                LOAD MORE POSTS<br />
-                <i class="glyphicon glyphicon-arrow-down"></i>
-            </a>
-        </div>
-    </div>
-</div>
+@section scripts {
+    <script src="~/Scripts/bravovetsresources.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#social-content").resources({
+                filters: "input.socialcontent-filter",
+                listName: "div.social-content-items-list",
+                itemClass: 'div.social-content-item',
+                query: '#Search',
+                loadMore: '#load-more',
+                getUrl: "/GetBravovetsSocialContent"
+            });
+        });
+    </script>
+}
