--- a/ProfSite/Views/BravoVetsWidgets/SyndicatedContentWidgetv2.cshtml
+++ b/ProfSite/Views/BravoVetsWidgets/SyndicatedContentWidgetv2.cshtml
@@ -9,8 +9,12 @@
     </div>
     <div id="carousel-@Model.Id" class="carousel slide bv-carousel" data-ride="" data-interval="false">
         <div class="carousel-header">
-            <a class="left carousel-control" href="#carousel-@Model.Id" data-slide="prev"><img src="/images/arrow2-slider-left.png" alt="left arrow"></a>
-            <a class="right carousel-control" href="#carousel-@Model.Id" data-slide="next"><img src="/images/arrow2-slider-right.png" alt="left arrow"></a>
+            <a class="left carousel-control" href="#carousel-@Model.Id" data-slide="prev">
+                <i class="icon icon-arrow-left"></i>
+            </a>
+            <a class="right carousel-control" href="#carousel-@Model.Id" data-slide="next">
+                <i class="icon icon-arrow-right"></i>
+            </a>
         </div>
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
