--- a/ProfSite/Views/BravoVets/Partials/_ResourceItem.cshtml
+++ b/ProfSite/Views/BravoVets/Partials/_ResourceItem.cshtml
@@ -1,11 +1,11 @@
 ﻿@model SyndicatedContentModel
 
-<div class="resource-item col-md-6">
+<li class="resource-item col-md-6">
     <h4>VIDEO</h4>
     <div class="resource-item-body">
         <div class="resource-content">
-            <h5>BRAVECTO OVERVIEW VIDEO</h5>
-            <p>Lorem ipsum</p>
+            <h5>@Model.Title</h5>
+            <p>@Html.Raw(Model.ContentText)</p>
             <div class="action-wrapper">
                 <a class="btn btn-default" href="#">
                     VIEW VIDEO
@@ -21,4 +21,4 @@
             <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
         </div>
     </div>
-</div>
+</li>
