--- a/ProfSite/Views/BravoVets/Profile.cshtml
+++ b/ProfSite/Views/BravoVets/Profile.cshtml
@@ -4,6 +4,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
     ViewBag.DisplaySubnavigation = false;
+    ViewBag.SelectedNode = "profile";
 }
 @{
     // This one view will render conditionally, based on whether it is an initial view, or has been reached through the "edit profile" link
