--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -106,7 +106,7 @@
                 <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
             </a>
             <br />
-            <a href="#">
+            <a href="#" class="share share-this">
                 Share this
                 <i class="icon icon-share"></i>
             </a>
@@ -232,7 +232,7 @@
                 <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
             </a>
             <br />
-            <a href="#">
+            <a href="#" class="share share-this">
                 Share this
                 <i class="icon icon-share"></i>
             </a>
@@ -265,7 +265,7 @@
                 <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
             </a>
             <br />
-            <a href="#">
+            <a href="#" class="share share-this">
                 Share this
                 <i class="icon icon-share"></i>
             </a>
