--- a/ProfSite/Views/BravoVetsWidgets/SyndicatedContentWidgetv2.cshtml
+++ b/ProfSite/Views/BravoVetsWidgets/SyndicatedContentWidgetv2.cshtml
@@ -10,10 +10,10 @@
     <div id="carousel-@Model.Id" class="carousel slide bv-carousel" data-ride="" data-interval="false">
         <div class="carousel-header">
             <a class="left carousel-control" href="#carousel-@Model.Id" data-slide="prev">
-                <i class="icon icon-arrow-left"></i>
+                <i class="glyphicon glyphicon-arrow-left"></i>
             </a>
             <a class="right carousel-control" href="#carousel-@Model.Id" data-slide="next">
-                <i class="icon icon-arrow-right"></i>
+                <i class="glyphicon glyphicon-arrow-right"></i>
             </a>
         </div>
         <!-- Wrapper for slides -->
