--- a/ProfSite/Views/BravoVets/Partials/_ResourceItem.cshtml
+++ b/ProfSite/Views/BravoVets/Partials/_ResourceItem.cshtml
@@ -11,7 +11,7 @@
                     VIEW VIDEO
                     <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                 </a>
-                <a href="#">
+                <a href="#" class="share-this share" data-event-id="@Model.Id">
                     Share this
                     <i class="icon icon-share"></i>
                 </a>
