--- a/ProfSite/Views/BravoVets/Partials/_SocialContentItem.cshtml
+++ b/ProfSite/Views/BravoVets/Partials/_SocialContentItem.cshtml
@@ -5,7 +5,7 @@
             <h5>A TALE OF TWO TREATMENTS</h5>
             <p>Take a look at two pet owners treatment experiences and discover how much more convenient and effective 12-week-long Bravecto can be compared to a traditional 4-week treatment.</p>
             <div class="action-wrapper">
-                <a href="#">
+                <a href="#" class="share share-this" data-event-id="@Model.Id">
                     Share this
                     <i class="icon icon-share"></i>
                 </a>
@@ -23,7 +23,7 @@
             <h5>EXTENDING THE BEST EXPERIENCES WITH INNOVATIVE FLEA AND TICK CARE</h5>
             <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience</p>
             <div class="action-wrapper">
-                <a href="#">
+                <a href="#" class="share share-this" data-event-id="@Model.Id">
                     Share this
                     <i class="icon icon-share"></i>
                 </a>
