--- a/ProfSite/Views/BravoVets/innovation.cshtml
+++ b/ProfSite/Views/BravoVets/innovation.cshtml
@@ -77,7 +77,7 @@
                     <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                 </a>
                 <br />
-                <a href="#">
+                <a href="#" class="share share-this">
                     Share this
                     <i class="icon icon-share"></i>
                 </a>
@@ -166,7 +166,7 @@
                     <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                 </a>
                 <br />
-                <a href="#">
+                <a href="#" class="share share-this">
                     Share this
                     <i class="icon icon-share"></i>
                 </a>
@@ -237,7 +237,7 @@
                         <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                     </a>
                     <br />
-                    <a href="#">
+                    <a href="#" class="share share-this">
                         Share this
                         <i class="icon icon-share"></i>
                     </a>
